fix: output text-align

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ textarea:focus{
     margin: 2rem auto;
     border-radius: 1rem;
     font-size: 20px;
+    text-align: left;
 }
 
 
